--- a/templates/index.html
+++ b/templates/index.html
@@ -253,7 +253,7 @@
 						<!-- Destination -->
 						<div class="destination item">
 							<div class="destination_image">
-								<img src="{{baseUrl}}/{{dest.img}}" alt="">
+								<img src="{{dest.img.url}}" alt="">
 								
 								{% if dest.offer %}
 								
